dataset1235/2025-2/805158916/users/1514794398/executions/3435325918_359761547.log
== RUN (2025-09-03 15:11:56)
-- CODE: 
idade = int(input("Insira a idade"))

print(idade)

if idade<=2
   print("Maior_de_idade")

else:
   print("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade<=2
               ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if idade<=2
               ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if idade<=2
               ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade<=2
               ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade<=2
               ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade<=2
               ^
SyntaxError: expected ':'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:12:19)
-- CODE: 
idade = int(input("Insira a idade"))

print(idade)

if idade<=2:
   print("Maior_de_idade")

else:
   print("Menor_de_idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
Menor_de_idade
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
Maior_de_idade
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
Maior_de_idade
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
Menor_de_idade
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
Menor_de_idade
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
Maior_de_idade
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:12:41)
-- CODE: 
idade = int(input("Insira a idade"))

print(idade)

if idade<=2:
   print("nao_paga")

else:
   print("Menor_de_idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
Menor_de_idade
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
nao_paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
nao_paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
Menor_de_idade
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
Menor_de_idade
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
nao_paga
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 15:11:55)
-- CODE: 
idade = int(input("Insira a idade"))

print(idade)

if idade<=2
   print("Maior_de_idade")

else:
   print("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade<=2
               ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if idade<=2
               ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if idade<=2
               ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade<=2
               ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade<=2
               ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade<=2
               ^
SyntaxError: expected ':'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:12:53)
-- CODE: 
idade = int(input("Insira a idade"))

print(idade)

if idade<=2:
   print("nao_paga")

else:
   print("nao_paga")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
nao_paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
nao_paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
nao_paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
nao_paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
nao_paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
nao_paga
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 15:12:07)
-- CODE: 
idade = int(input("Insira a idade"))

print(idade)

if idade<=2:
   print("Maior_de_idade")

else:
   print("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
Menor_de_idade
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
Maior_de_idade
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
Maior_de_idade
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
Menor_de_idade
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
Menor_de_idade
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
Maior_de_idade
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
